Add optional SVD-based condition number display and hermitian_type alias to distributed multi-vector classes
- Introduced CMake option `ChASE_DISPLAY_COND_V_SVD` (default OFF) to control whether the condition number of V (from SVD) is computed and displayed.
- Wrapped all code that computes and prints the condition number of V from SVD in the following classes with `#ifdef ChASE_DISPLAY_COND_V_SVD`:
    - Impl/pchase_gpu/pchase_gpu.hpp
    - Impl/pchase_cpu/pchase_cpu.hpp
    - Impl/chase_cpu/chase_cpu.hpp
    - Impl/chase_gpu/chase_gpu.hpp
- The feature is now only compiled and executed if enabled at CMake configure time, reducing default binary size and runtime overhead.
- Updated CMakeLists.txt to add and document the new option.

- Added `using hermitian_type = chase::matrix::Hermitian;` to both `DistMultiVector1D` and `DistMultiVectorBlockCyclic1D` classes in linalg/distMatrix/distMultiVector.hpp for consistency with other matrix and distributed matrix classes.
- This allows generic code to query the hermitian type of distributed multi-vectors, improving type trait consistency across the codebase.

No changes were made to the core matrix or distributed matrix classes regarding the macro; all macro usage is in the main algorithm driver classes. The hermitian_type alias addition is new for distributed multi-vector classes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ option(CHASE_ENABLE_MPI_IO "Enable MPI IO to read Hamiltonian matrix from local"
 option(CHASE_USE_NVTX "Enable NVTX for profiling" OFF)
 option(CHASE_BUILD_WITH_EXAMPLES "Build the examples" OFF)
 option(CHASE_BUILD_WITH_DOCS "Build the docs" OFF)
+option(ChASE_DISPLAY_COND_V_SVD "Compute and display condition number of V from SVD" OFF)
 
 if( CHASE_OUTPUT )
   target_compile_definitions( chase_algorithm  INTERFACE "-DCHASE_OUTPUT" )
@@ -60,6 +61,10 @@ endif()
 
 if(CHASE_USE_NVTX)
   target_compile_definitions( chase_algorithm  INTERFACE "-DUSE_NVTX" )
+endif()
+
+if(ChASE_DISPLAY_COND_V_SVD)
+    add_definitions(-DChASE_DISPLAY_COND_V_SVD)
 endif()
 
 add_subdirectory(external)
