--- a/external/CMakeLists.txt
+++ b/external/CMakeLists.txt
@@ -55,12 +55,6 @@ endif()
 
 find_package(CUDAToolkit)
 if(CUDAToolkit_FOUND)
-	#  if(${CUDAToolkit_VERSION} VERSION_LESS 12.6.85)
-	#message(WARNING "CUDA VERSION = " ${CUDAToolkit_VERSION} " < 12.6.85! Xgeev kernel is not in this CUDA version. ChASE GPU will not work for Quasi-Hermitian problems.")
-	#else()
-	#target_compile_definitions( chase_algorithm  INTERFACE "-DXGEEV_EXISTS" )
-	#message(STATUS "CUDA VERSION = " ${CUDAToolkit_VERSION} " >= 12.6.85. Xgeev kernel exists. ChASE GPU will work for Quasi-Hermitian problems.")
-	#endif()
   add_library(cublaspp INTERFACE)
   target_include_directories(cublaspp INTERFACE
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/cublaspp>
@@ -77,11 +71,13 @@ if(CUDAToolkit_FOUND)
   )
   target_link_libraries(cusolverpp INTERFACE CUDA::cusolver CUDA::cudart)
 
-  if(${CUDAToolkit_VERSION} VERSION_LESS 12.6.85)
-    message(WARNING "CUDA VERSION = " ${CUDAToolkit_VERSION} " < 12.6.85! Xgeev kernel is not in this CUDA version. ChASE GPU will not work for Quasi-Hermitian problems.")
-  else()
-    target_compile_definitions( cusolverpp  INTERFACE "-DXGEEV_EXISTS" )
-    message(STATUS "CUDA VERSION = " ${CUDAToolkit_VERSION} " >= 12.6.85. Xgeev kernel exists. ChASE GPU will work for Quasi-Hermitian problems.")
+  if(CHASE_ENALBE_XGEEV_RAYLEIGHRITZ)
+    if(${CUDAToolkit_VERSION} VERSION_LESS 12.6.85)
+	    message(WARNING "CUDA VERSION = " ${CUDAToolkit_VERSION} " < 12.6.85! Xgeev kernel is not in this CUDA version. ChASE GPU will use the HEEVD version instead.")
+    else()
+      target_compile_definitions( cusolverpp  INTERFACE "-DXGEEV_EXISTS" )
+      message(STATUS "CUDA VERSION = " ${CUDAToolkit_VERSION} " >= 12.6.85. Xgeev kernel exists. ChASE GPU XGEEV will work for Pseudo-Hermitian problems.")
+    endif()
   endif()
 
 endif()
