Early locking statistics added
-> This commit enables extracting statistics on the number of locked
eigenvectors and statistics on the associated residuals. This will can
help the users determining the accuracy of the computed eigenpairs.
-> This commit also splits the QR / RR double option for single
precision.
-> Increased tolerance for early locking. To be changed?

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,7 +31,8 @@ option(CHASE_BUILD_WITH_DOCS "Build the docs" OFF)
 option(CHASE_SAVE_RESIDUALS "Print the residuals in an external file" OFF)
 option(CHASE_ENABLE_XGEEV_RAYLEIGHRITZ "Enable solving pseudo-hermitian problems with XGEEV cusolver" OFF)
 option(ChASE_DISPLAY_COND_V_SVD "Compute and display condition number of V from SVD" OFF)
-option(CHASE_QR_RR_DOUBLE_PRECISION "Operate QR and HEEVD in RR in Double Precision" OFF)
+option(CHASE_QR_DOUBLE_PRECISION "Operate QR in Double Precision" ON)
+option(CHASE_RR_DOUBLE_PRECISION "Operate HEEVD in RR for pseudo-hermitian matrices in Double Precision" OFF)
 
 if( CHASE_OUTPUT )
   target_compile_definitions( chase_algorithm  INTERFACE "-DCHASE_OUTPUT" )
@@ -66,8 +67,12 @@ if(CHASE_USE_NVTX)
   target_compile_definitions( chase_algorithm  INTERFACE "-DUSE_NVTX" )
 endif()
 
-if(CHASE_QR_RR_DOUBLE_PRECISION)
-  add_definitions(-DQR_RR_DOUBLE_PRECISION)
+if(CHASE_QR_DOUBLE_PRECISION)
+  add_definitions(-DQR_DOUBLE_PRECISION)
+endif()
+
+if(CHASE_RR_DOUBLE_PRECISION)
+  add_definitions(-DRR_DOUBLE_PRECISION)
 endif()
 
 if(ChASE_DISPLAY_COND_V_SVD)
