Renamed every quasi by pseudo

--- a/examples/5_bse_benchmark/CMakeLists.txt
+++ b/examples/5_bse_benchmark/CMakeLists.txt
@@ -3,10 +3,10 @@ if(POPL_FOUND)
     target_link_libraries("herm_chase_run_cpu" chase_cpu)
     target_include_directories( "herm_chase_run_cpu" PRIVATE ${POPL_INCLUDE_DIR})
 
-    add_executable( "quasi_chase_run_cpu" 5_bse_benchmark.cpp )
-    target_link_libraries("quasi_chase_run_cpu" chase_cpu)
-    target_compile_definitions( "quasi_chase_run_cpu" PRIVATE USE_QUASI_HERMITIAN=1)
-    target_include_directories( "quasi_chase_run_cpu" PRIVATE ${POPL_INCLUDE_DIR})
+    add_executable( "pseudo_chase_run_cpu" 5_bse_benchmark.cpp )
+    target_link_libraries("pseudo_chase_run_cpu" chase_cpu)
+    target_compile_definitions( "pseudo_chase_run_cpu" PRIVATE USE_PSEUDO_HERMITIAN=1)
+    target_include_directories( "pseudo_chase_run_cpu" PRIVATE ${POPL_INCLUDE_DIR})
 
     if(TARGET chase_gpu)
         add_executable("herm_chase_run_gpu" 5_bse_benchmark.cpp)
@@ -14,11 +14,11 @@ if(POPL_FOUND)
         target_compile_definitions("herm_chase_run_gpu" INTERFACE "-DHAS_CUDA")
         target_include_directories( "herm_chase_run_gpu" PRIVATE ${POPL_INCLUDE_DIR})
 
-        add_executable("quasi_chase_run_gpu" 5_bse_benchmark.cpp)
-        target_link_libraries("quasi_chase_run_gpu" chase_gpu)
-        target_compile_definitions("quasi_chase_run_gpu" PRIVATE USE_QUASI_HERMITIAN=1)
-        target_compile_definitions("quasi_chase_run_gpu" INTERFACE "-DHAS_CUDA")
-        target_include_directories( "quasi_chase_run_gpu" PRIVATE ${POPL_INCLUDE_DIR})
+        add_executable("pseudo_chase_run_gpu" 5_bse_benchmark.cpp)
+        target_link_libraries("pseudo_chase_run_gpu" chase_gpu)
+        target_compile_definitions("pseudo_chase_run_gpu" PRIVATE USE_PSEUDO_HERMITIAN=1)
+        target_compile_definitions("pseudo_chase_run_gpu" INTERFACE "-DHAS_CUDA")
+        target_include_directories( "pseudo_chase_run_gpu" PRIVATE ${POPL_INCLUDE_DIR})
     endif()
 
     if(TARGET pchase_cpu)
@@ -27,11 +27,11 @@ if(POPL_FOUND)
         target_compile_definitions("herm_block_dist_chase_run_cpu" PRIVATE USE_MPI=1)
         target_include_directories( "herm_block_dist_chase_run_cpu" PRIVATE ${POPL_INCLUDE_DIR})
 
-        add_executable("quasi_block_dist_chase_run_cpu" 5_bse_benchmark.cpp)
-        target_link_libraries("quasi_block_dist_chase_run_cpu" pchase_cpu)
-        target_compile_definitions("quasi_block_dist_chase_run_cpu" PRIVATE USE_QUASI_HERMITIAN=1)
-        target_compile_definitions("quasi_block_dist_chase_run_cpu" PRIVATE USE_MPI=1)
-        target_include_directories( "quasi_block_dist_chase_run_cpu" PRIVATE ${POPL_INCLUDE_DIR})
+        add_executable("pseudo_block_dist_chase_run_cpu" 5_bse_benchmark.cpp)
+        target_link_libraries("pseudo_block_dist_chase_run_cpu" pchase_cpu)
+        target_compile_definitions("pseudo_block_dist_chase_run_cpu" PRIVATE USE_PSEUDO_HERMITIAN=1)
+        target_compile_definitions("pseudo_block_dist_chase_run_cpu" PRIVATE USE_MPI=1)
+        target_include_directories( "pseudo_block_dist_chase_run_cpu" PRIVATE ${POPL_INCLUDE_DIR})
 
         add_executable("herm_cyclic_dist_chase_run_cpu" 5_bse_benchmark.cpp)
         target_link_libraries("herm_cyclic_dist_chase_run_cpu" pchase_cpu)
@@ -39,13 +39,13 @@ if(POPL_FOUND)
         target_compile_definitions("herm_cyclic_dist_chase_run_cpu" PRIVATE USE_MPI=1)
         target_include_directories( "herm_cyclic_dist_chase_run_cpu" PRIVATE ${POPL_INCLUDE_DIR})
 
-        add_executable("quasi_cyclic_dist_chase_run_cpu" 5_bse_benchmark.cpp )
-        target_link_libraries("quasi_cyclic_dist_chase_run_cpu" pchase_cpu)
-        target_compile_definitions("quasi_cyclic_dist_chase_run_cpu" PRIVATE USE_BLOCKCYCLIC=1)
-        target_compile_definitions("quasi_cyclic_dist_chase_run_cpu" PRIVATE USE_QUASI_HERMITIAN=1)
-        target_compile_definitions("quasi_cyclic_dist_chase_run_cpu" PRIVATE USE_MPI=1)
-        target_compile_definitions("quasi_cyclic_dist_chase_run_cpu" PRIVATE USE_MPI=1)
-        target_include_directories( "quasi_cyclic_dist_chase_run_cpu" PRIVATE ${POPL_INCLUDE_DIR})
+        add_executable("pseudo_cyclic_dist_chase_run_cpu" 5_bse_benchmark.cpp )
+        target_link_libraries("pseudo_cyclic_dist_chase_run_cpu" pchase_cpu)
+        target_compile_definitions("pseudo_cyclic_dist_chase_run_cpu" PRIVATE USE_BLOCKCYCLIC=1)
+        target_compile_definitions("pseudo_cyclic_dist_chase_run_cpu" PRIVATE USE_PSEUDO_HERMITIAN=1)
+        target_compile_definitions("pseudo_cyclic_dist_chase_run_cpu" PRIVATE USE_MPI=1)
+        target_compile_definitions("pseudo_cyclic_dist_chase_run_cpu" PRIVATE USE_MPI=1)
+        target_include_directories( "pseudo_cyclic_dist_chase_run_cpu" PRIVATE ${POPL_INCLUDE_DIR})
     endif()
 
     if(TARGET pchase_gpu)
@@ -54,11 +54,11 @@ if(POPL_FOUND)
         target_compile_definitions("herm_block_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL -DHAS_CUDA")
         target_include_directories( "herm_block_dist_chase_run_gpu" PRIVATE ${POPL_INCLUDE_DIR})
 
-        add_executable("quasi_block_dist_chase_run_gpu" 5_bse_benchmark.cpp)
-        target_link_libraries("quasi_block_dist_chase_run_gpu"  pchase_gpu)
-        target_compile_definitions("quasi_block_dist_chase_run_gpu" PRIVATE USE_QUASI_HERMITIAN=1)
-        target_compile_definitions("quasi_block_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL -DHAS_CUDA")
-        target_include_directories( "quasi_block_dist_chase_run_gpu" PRIVATE ${POPL_INCLUDE_DIR})
+        add_executable("pseudo_block_dist_chase_run_gpu" 5_bse_benchmark.cpp)
+        target_link_libraries("pseudo_block_dist_chase_run_gpu"  pchase_gpu)
+        target_compile_definitions("pseudo_block_dist_chase_run_gpu" PRIVATE USE_PSEUDO_HERMITIAN=1)
+        target_compile_definitions("pseudo_block_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL -DHAS_CUDA")
+        target_include_directories( "pseudo_block_dist_chase_run_gpu" PRIVATE ${POPL_INCLUDE_DIR})
 
         add_executable("herm_cyclic_dist_chase_run_gpu" 5_bse_benchmark.cpp)
         target_link_libraries("herm_cyclic_dist_chase_run_gpu" pchase_gpu)
@@ -66,12 +66,12 @@ if(POPL_FOUND)
         target_compile_definitions("herm_cyclic_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL -DHAS_CUDA")
         target_include_directories( "herm_cyclic_dist_chase_run_gpu" PRIVATE ${POPL_INCLUDE_DIR})
 
-        add_executable("quasi_cyclic_dist_chase_run_gpu" 5_bse_benchmark.cpp)
-        target_link_libraries("quasi_cyclic_dist_chase_run_gpu" pchase_gpu)
-        target_compile_definitions("quasi_cyclic_dist_chase_run_gpu" PRIVATE USE_BLOCKCYCLIC=1)
-        target_compile_definitions("quasi_cyclic_dist_chase_run_gpu" PRIVATE USE_QUASI_HERMITIAN=1)
-        target_compile_definitions("quasi_cyclic_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL" "-DHAS_CUDA")
-        target_include_directories( "quasi_cyclic_dist_chase_run_gpu" PRIVATE ${POPL_INCLUDE_DIR})
+        add_executable("pseudo_cyclic_dist_chase_run_gpu" 5_bse_benchmark.cpp)
+        target_link_libraries("pseudo_cyclic_dist_chase_run_gpu" pchase_gpu)
+        target_compile_definitions("pseudo_cyclic_dist_chase_run_gpu" PRIVATE USE_BLOCKCYCLIC=1)
+        target_compile_definitions("pseudo_cyclic_dist_chase_run_gpu" PRIVATE USE_PSEUDO_HERMITIAN=1)
+        target_compile_definitions("pseudo_cyclic_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL" "-DHAS_CUDA")
+        target_include_directories( "pseudo_cyclic_dist_chase_run_gpu" PRIVATE ${POPL_INCLUDE_DIR})
         endif()
 else()
   message( "popl not found, not building example 2" )
