--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,66 +101,66 @@ add_executable( "chase_driver_gpu" tests/noinput.cpp )
 target_link_libraries(chase_driver_gpu chase_gpu)
 endif()
 
-#add_executable( "herm_chase_run_cpu" tests/dist_quasi_noinput.cpp )
+#add_executable( "herm_chase_run_cpu" tests/dist_pseudo_noinput.cpp )
 #target_link_libraries("herm_chase_run_cpu" chase_cpu)
 
-#add_executable( "quasi_chase_run_cpu" tests/dist_quasi_noinput.cpp )
-#target_link_libraries("quasi_chase_run_cpu" chase_cpu)
-#target_compile_definitions( "quasi_chase_run_cpu" PRIVATE USE_QUASI_HERMITIAN=1)
+#add_executable( "pseudo_chase_run_cpu" tests/dist_pseudo_noinput.cpp )
+#target_link_libraries("pseudo_chase_run_cpu" chase_cpu)
+#target_compile_definitions( "pseudo_chase_run_cpu" PRIVATE USE_PSEUDO_HERMITIAN=1)
 
 #if(TARGET chase_gpu)
-	#add_executable("herm_chase_run_gpu" tests/dist_quasi_noinput.cpp)
+	#add_executable("herm_chase_run_gpu" tests/dist_pseudo_noinput.cpp)
 #target_link_libraries("herm_chase_run_gpu" chase_gpu)
 #target_compile_definitions("herm_chase_run_gpu" INTERFACE "-DHAS_CUDA")
 
-#add_executable("quasi_chase_run_gpu" tests/dist_quasi_noinput.cpp)
-#target_link_libraries("quasi_chase_run_gpu" chase_gpu)
-#target_compile_definitions("quasi_chase_run_gpu" PRIVATE USE_QUASI_HERMITIAN=1)
-#target_compile_definitions("quasi_chase_run_gpu" INTERFACE "-DHAS_CUDA")
+#add_executable("pseudo_chase_run_gpu" tests/dist_pseudo_noinput.cpp)
+#target_link_libraries("pseudo_chase_run_gpu" chase_gpu)
+#target_compile_definitions("pseudo_chase_run_gpu" PRIVATE USE_PSEUDO_HERMITIAN=1)
+#target_compile_definitions("pseudo_chase_run_gpu" INTERFACE "-DHAS_CUDA")
 #endif()
 
 #if(TARGET pchase_cpu)
-	#add_executable("herm_block_dist_chase_run_cpu" tests/dist_quasi_noinput.cpp)
+	#add_executable("herm_block_dist_chase_run_cpu" tests/dist_pseudo_noinput.cpp)
 #target_link_libraries("herm_block_dist_chase_run_cpu" pchase_cpu)
 #target_compile_definitions("herm_block_dist_chase_run_cpu" PRIVATE USE_MPI=1)
 
-#add_executable("quasi_block_dist_chase_run_cpu" tests/dist_quasi_noinput.cpp)
-#target_link_libraries("quasi_block_dist_chase_run_cpu" pchase_cpu)
-#target_compile_definitions("quasi_block_dist_chase_run_cpu" PRIVATE USE_QUASI_HERMITIAN=1)
-#target_compile_definitions("quasi_block_dist_chase_run_cpu" PRIVATE USE_MPI=1)
+#add_executable("pseudo_block_dist_chase_run_cpu" tests/dist_pseudo_noinput.cpp)
+#target_link_libraries("pseudo_block_dist_chase_run_cpu" pchase_cpu)
+#target_compile_definitions("pseudo_block_dist_chase_run_cpu" PRIVATE USE_PSEUDO_HERMITIAN=1)
+#target_compile_definitions("pseudo_block_dist_chase_run_cpu" PRIVATE USE_MPI=1)
 
-#add_executable("herm_cyclic_dist_chase_run_cpu" tests/dist_quasi_noinput.cpp)
+#add_executable("herm_cyclic_dist_chase_run_cpu" tests/dist_pseudo_noinput.cpp)
 #target_link_libraries("herm_cyclic_dist_chase_run_cpu" pchase_cpu)
 #target_compile_definitions("herm_cyclic_dist_chase_run_cpu" PRIVATE USE_BLOCKCYCLIC=1)
 #target_compile_definitions("herm_cyclic_dist_chase_run_cpu" PRIVATE USE_MPI=1)
 
-#add_executable("quasi_cyclic_dist_chase_run_cpu" tests/dist_quasi_noinput.cpp )
-#target_link_libraries("quasi_cyclic_dist_chase_run_cpu" pchase_cpu)
-#target_compile_definitions("quasi_cyclic_dist_chase_run_cpu" PRIVATE USE_BLOCKCYCLIC=1)
-#target_compile_definitions("quasi_cyclic_dist_chase_run_cpu" PRIVATE USE_QUASI_HERMITIAN=1)
-#target_compile_definitions("quasi_cyclic_dist_chase_run_cpu" PRIVATE USE_MPI=1)
+#add_executable("pseudo_cyclic_dist_chase_run_cpu" tests/dist_pseudo_noinput.cpp )
+#target_link_libraries("pseudo_cyclic_dist_chase_run_cpu" pchase_cpu)
+#target_compile_definitions("pseudo_cyclic_dist_chase_run_cpu" PRIVATE USE_BLOCKCYCLIC=1)
+#target_compile_definitions("pseudo_cyclic_dist_chase_run_cpu" PRIVATE USE_PSEUDO_HERMITIAN=1)
+#target_compile_definitions("pseudo_cyclic_dist_chase_run_cpu" PRIVATE USE_MPI=1)
 #endif()
 
 #if(TARGET pchase_gpu)
-	#add_executable("herm_block_dist_chase_run_gpu" tests/dist_quasi_noinput.cpp)
+	#add_executable("herm_block_dist_chase_run_gpu" tests/dist_pseudo_noinput.cpp)
 #target_link_libraries("herm_block_dist_chase_run_gpu" pchase_gpu)
 #target_compile_definitions("herm_block_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL -DHAS_CUDA")
 
-#add_executable("quasi_block_dist_chase_run_gpu" tests/dist_quasi_noinput.cpp)
-#target_link_libraries("quasi_block_dist_chase_run_gpu"  pchase_gpu)
-#target_compile_definitions("quasi_block_dist_chase_run_gpu" PRIVATE USE_QUASI_HERMITIAN=1)
-#target_compile_definitions("quasi_block_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL -DHAS_CUDA")
+#add_executable("pseudo_block_dist_chase_run_gpu" tests/dist_pseudo_noinput.cpp)
+#target_link_libraries("pseudo_block_dist_chase_run_gpu"  pchase_gpu)
+#target_compile_definitions("pseudo_block_dist_chase_run_gpu" PRIVATE USE_PSEUDO_HERMITIAN=1)
+#target_compile_definitions("pseudo_block_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL -DHAS_CUDA")
 
-#add_executable("herm_cyclic_dist_chase_run_gpu" tests/dist_quasi_noinput.cpp)
+#add_executable("herm_cyclic_dist_chase_run_gpu" tests/dist_pseudo_noinput.cpp)
 #target_link_libraries("herm_cyclic_dist_chase_run_gpu" pchase_gpu)
 #target_compile_definitions("herm_cyclic_dist_chase_run_gpu" PRIVATE USE_BLOCKCYCLIC=1)
 #target_compile_definitions("herm_cyclic_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL -DHAS_CUDA")
 
-#add_executable("quasi_cyclic_dist_chase_run_gpu" tests/dist_quasi_noinput.cpp)
-#target_link_libraries("quasi_cyclic_dist_chase_run_gpu" pchase_gpu)
-#target_compile_definitions("quasi_cyclic_dist_chase_run_gpu" PRIVATE USE_BLOCKCYCLIC=1)
-#target_compile_definitions("quasi_cyclic_dist_chase_run_gpu" PRIVATE USE_QUASI_HERMITIAN=1)
-#target_compile_definitions("quasi_cyclic_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL" "-DHAS_CUDA")
+#add_executable("pseudo_cyclic_dist_chase_run_gpu" tests/dist_pseudo_noinput.cpp)
+#target_link_libraries("pseudo_cyclic_dist_chase_run_gpu" pchase_gpu)
+#target_compile_definitions("pseudo_cyclic_dist_chase_run_gpu" PRIVATE USE_BLOCKCYCLIC=1)
+#target_compile_definitions("pseudo_cyclic_dist_chase_run_gpu" PRIVATE USE_PSEUDO_HERMITIAN=1)
+#target_compile_definitions("pseudo_cyclic_dist_chase_run_gpu" INTERFACE "-DHAS_NCCL" "-DHAS_CUDA")
 #endif()
 
 option(ENABLE_TESTS "Enable unit tests." OFF)
