--- a/tests/linalg/internal/nccl/CMakeLists.txt
+++ b/tests/linalg/internal/nccl/CMakeLists.txt
@@ -1,10 +1,10 @@
 setup_test(HEMMGPUNCCLDistTest hemm.cpp LIBRARIES pchase_gpu)
-setup_test(QuasiHEMMGPUNCCLDistTest quasi_hermitian_hemm.cpp LIBRARIES pchase_gpu)
+setup_test(PseudoHEMMGPUNCCLDistTest pseudo_hermitian_hemm.cpp LIBRARIES pchase_gpu)
 setup_test(CholQRGPUNCCLDistTest cholqr.cpp LIBRARIES pchase_gpu)
 setup_test(RayleighRitzGPUNCCLDistTest rayleighRitz.cpp LIBRARIES pchase_gpu)
-setup_test(QuasiRayleighRitzGPUNCCLDistTest quasi_hermitian_rayleighRitz.cpp LIBRARIES pchase_gpu)
+setup_test(PseudoRayleighRitzGPUNCCLDistTest pseudo_hermitian_rayleighRitz.cpp LIBRARIES pchase_gpu)
 setup_test(ResidualsGPUNCCLDistTest residuals.cpp LIBRARIES pchase_gpu)
-setup_test(QuasiHermitianLanczosGPUNCCLDistTest quasi_hermitian_lanczos.cpp LIBRARIES pchase_gpu)
+setup_test(PseudoHermitianLanczosGPUNCCLDistTest pseudo_hermitian_lanczos.cpp LIBRARIES pchase_gpu)
 setup_test(LanczosGPUNCCLDistTest lanczos.cpp LIBRARIES pchase_gpu)
 setup_test(shiftDiagonalGPUNCCLDistTest shiftDiagonal.cpp LIBRARIES pchase_gpu)
 setup_test(flipSignGPUNCCLDistTest flipSign.cpp LIBRARIES pchase_gpu)
