try to use jureca for CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -89,7 +89,7 @@ test_gpu:
   dependencies:
     - build_gpu
   tags:
-    - juwels_booster
+    - jureca
     - jacamar
     - compute
     - slurm
