--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -157,6 +157,7 @@ pages:
     - coverage
   script:
     - echo "Publishing coverage badge to Pages..."
+    - echo "Branch: $CI_COMMIT_REF_NAME"
   artifacts:
     paths:
       - public
