--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ stages:
   - build
   - test
   - coverage
-  - upload
+  # - upload
 
 .default_source_changes: &only_source_changes
   rules:
@@ -58,7 +58,6 @@ test_cpu:
       - build_cpu/*
     expire_in: 1 week
 
-# ---------------- GPU Jobs ----------------
 build_gpu:
   stage: build
   tags:
@@ -85,7 +84,7 @@ build_gpu:
       - build_gpu/tests
     expire_in: 1 week
 
-test_gpu_coverage:
+test_gpu:
   stage: test
   dependencies:
     - build_gpu
@@ -96,49 +95,29 @@ test_gpu_coverage:
     - slurm
   id_tokens:
     SITE_ID_TOKEN:
-      aud: https://gitlab.jsc.fz-juelich.de    
+      aud: https://gitlab.jsc.fz-juelich.de
   <<: *only_source_changes
   script:
     - echo $SYSTEMNAME
     - module load Stages/2025 GCC/13.3.0 OpenMPI imkl CMake CUDA
     - export CUDA_VISIBLE_DEVICES=0,1,2,3
     - cd build_gpu
-    # Run tests
     - CTEST_OUTPUT_ON_FAILURE=1 make test
-    # Generate coverage
-    - lcov --capture --directory ./ --output-file coverage.info
-    - lcov --summary coverage.info | tee coverage.txt
-    - |
-      COV=$(grep -oP 'lines.*: \K\d+\.\d+' coverage.txt)
-      echo "Total coverage = ${COV}%"
-    - |
-      if (( $(echo "$COV < 70" | bc -l) )); then COLOR=red
-      elif (( $(echo "$COV < 85" | bc -l) )); then COLOR=yellow
-      else COLOR=brightgreen
-      fi
-    - mkdir -p public
-    - |
-      cat <<EOF > public/coverage.json
-      {
-        "schemaVersion": 1,
-        "label": "coverage (master)",
-        "message": "${COV}%",
-        "color": "${COLOR}"
-      }
-      EOF
+    - rm -rf _deps
   artifacts:
     paths:
-      - public
+      - build_gpu/*
     expire_in: 1 week
 
-# ---------------- GitLab Pages Deployment ----------------
-pages:
-  stage: upload
+coverage:
+  stage: coverage
+  coverage: '/lines......: (\d+[.]\d+)/'
   dependencies:
-    - test_gpu_coverage
+    - test_gpu
+  tags: [ public-docker ]
+  image:
+    name: xinzhewu/lcov-gcc13.3.0
+  <<: *only_source_changes
   script:
-    - echo "Publishing coverage badge to Pages..."
-  artifacts:
-    paths:
-      - public
-    expire_in: never
+    - lcov --capture --directory ./build_gpu --output-file coverage.info
+    - lcov --summary coverage.info
