--- a/Impl/pchase_gpu/CMakeLists.txt
+++ b/Impl/pchase_gpu/CMakeLists.txt
@@ -24,8 +24,7 @@ endif()
 target_include_directories(pchase_gpu INTERFACE 
                                                $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
                                                $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/Impl>
-                                               "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/Impl/pchase_gpu>"
-                                               "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/config>")
+                                               "$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}/Impl/pchase_gpu>")
 
 # NO_MPI should not be defined for parallel targets - this allows MPI headers to be included
 # Serial targets (chase_cpu/chase_gpu) define NO_MPI to exclude MPI headers
@@ -47,11 +46,6 @@ install(TARGETS pchase_gpu
 )
 
 install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/Impl
-  FILES_MATCHING
-    PATTERN "*.hpp"
-)
-
-install(DIRECTORY ${CMAKE_SOURCE_DIR}/Impl/config DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/Impl
   FILES_MATCHING
     PATTERN "*.hpp"
 )
