remove dependecies linalg_internal_nccl and mpi_grid_nccl as hard dependencies of pchase_gpu target

--- a/examples/1_hello_world/CMakeLists.txt
+++ b/examples/1_hello_world/CMakeLists.txt
@@ -4,6 +4,6 @@ target_link_libraries( "1_hello_world.exe" PRIVATE pchase_cpu )
 endif()
 
 if(TARGET pchase_gpu)
-add_executable( "1_hello_world_nccl.exe" "1_hello_world.cpp")
-target_link_libraries( "1_hello_world_nccl.exe" PRIVATE pchase_gpu )
+add_executable( "1_hello_world_gpu.exe" "1_hello_world.cpp")
+target_link_libraries( "1_hello_world_gpu.exe" PRIVATE pchase_gpu )
 endif()
